--- a/app/src/main/res/menu/list_action_mode.xml
+++ b/app/src/main/res/menu/list_action_mode.xml
@@ -6,16 +6,16 @@
         android:icon="@drawable/icon_edit"
         android:title="@string/edit"
         android:visible="false"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/list_action_mode_move"
-        android:title="@string/move_korean"
+        android:title="@string/move"
         android:icon="@drawable/icon_move"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/list_action_mode_del"
         android:icon="@drawable/icon_delete"
-        android:title="@string/delete_korean"
+        android:title="@string/delete"
         app:showAsAction="ifRoom" />
 
 </menu>
