--- a/app/src/main/res/drawable/tree_view_dialog_background.xml
+++ b/app/src/main/res/drawable/tree_view_dialog_background.xml
@@ -4,7 +4,7 @@
     <corners android:radius="@dimen/_20sdp" />
     <padding
         android:bottom="@dimen/_12sdp"
-        android:left="@dimen/_8sdp"
-        android:top="@dimen/_8sdp"
-        android:right="@dimen/_8sdp"/>
+        android:left="@dimen/_4sdp"
+        android:right="@dimen/_4sdp"
+        android:top="@dimen/_4sdp" />
 </shape>
