--- a/app/src/main/res/layout/item_list_recycler_folder.xml
+++ b/app/src/main/res/layout/item_list_recycler_folder.xml
@@ -23,10 +23,9 @@
             app:cardCornerRadius="@dimen/_8sdp"
             app:cardElevation="@dimen/_4sdp">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="bottom"
                 android:layout_marginHorizontal="@dimen/_2sdp"
                 android:ellipsize="end"
                 android:gravity="center"
@@ -58,7 +57,6 @@
                 android:alpha="0.8"
                 android:buttonTint="?colorControlNormal"
                 android:clickable="false"
-                android:elevation="@dimen/_3sdp"
                 android:scaleX="0.5"
                 android:scaleY="0.5"
                 android:visibility="gone" />
@@ -66,6 +64,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/folder_amount_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
