--- a/app/src/main/res/layout/item_list_recycler_grid.xml
+++ b/app/src/main/res/layout/item_list_recycler_grid.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -8,8 +10,7 @@
             type="com.example.project_myfit.ui.main.listfragment.database.Size" />
     </data>
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -32,13 +33,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/grid_image"
-                        setUri="@{size.imageUri}"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/_140sdp"
-                        android:layout_gravity="top"
-                        android:layout_marginTop="@dimen/_16sdp" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:id="@+id/grid_image"
+                            setUri="@{size.imageUri}"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/_140sdp"
+                            android:layout_marginTop="@dimen/_16sdp"
+                            app:layout_constraintDimensionRatio="1"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/add_image_icon"
@@ -46,8 +54,7 @@
                         android:layout_width="@dimen/_40sdp"
                         android:layout_height="@dimen/_40sdp"
                         android:layout_gravity="center"
-                        android:alpha="0.2"
-                        android:clickable="false" />
+                        android:alpha="0.2" />
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/grid_drag_handle"
@@ -61,42 +68,33 @@
                         tools:src="@drawable/icon_drag_handle" />
                 </FrameLayout>
 
-
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical"
+                    android:paddingHorizontal="@dimen/_4sdp"
+                    android:paddingVertical="@dimen/_2sdp">
 
-                    <androidx.appcompat.widget.LinearLayoutCompat
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:alpha="0.7"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:text="@{size.brand}"
+                        android:textSize="@dimen/_8sdp"
+                        tools:text="앤더슨벨" />
+
+                    <com.google.android.material.textview.MaterialTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <com.google.android.material.textview.MaterialTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="start|bottom"
-                            android:layout_marginHorizontal="@dimen/_4sdp"
-                            android:layout_marginTop="@dimen/_2sdp"
-                            android:alpha="0.7"
-                            android:ellipsize="end"
-                            android:maxLines="1"
-                            android:text="@{size.brand}"
-                            android:textSize="@dimen/_8sdp"
-                            tools:text="앤더슨벨" />
-
-                        <com.google.android.material.textview.MaterialTextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="bottom"
-                            android:layout_marginHorizontal="@dimen/_4sdp"
-                            android:layout_marginBottom="@dimen/_2sdp"
-                            android:alpha="0.8"
-                            android:text="@{size.name}"
-                            android:textSize="@dimen/_10sdp"
-                            app:fontFamily="@font/sc_dream5"
-                            tools:text="오버핏 반팔" />
-                    </androidx.appcompat.widget.LinearLayoutCompat>
+                        android:alpha="0.8"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:text="@{size.name}"
+                        android:textSize="@dimen/_10sdp"
+                        app:fontFamily="@font/sc_dream5"
+                        tools:text="오버핏 반팔" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.appcompat.widget.LinearLayoutCompat>
         </com.google.android.material.card.MaterialCardView>
@@ -112,7 +110,7 @@
             android:alpha="0.8"
             android:buttonTint="?colorControlNormal"
             android:clickable="false"
-            android:elevation="@dimen/_3sdp"
+            android:elevation="@dimen/_4sdp"
             android:scaleX="0.7"
             android:scaleY="0.7"
             android:visibility="gone" />
