--- a/app/src/main/res/layout/item_list_recycler_list.xml
+++ b/app/src/main/res/layout/item_list_recycler_list.xml
@@ -17,8 +17,7 @@
         <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/list_check_box"
             android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            android:layout_gravity="center_vertical"
+            android:layout_height="match_parent"
             android:layout_marginStart="@dimen/_8sdp"
             android:alpha="0.8"
             android:buttonTint="?colorControlNormal"
@@ -34,7 +33,6 @@
             app:cardBackgroundColor="?colorPrimary"
             app:cardElevation="@dimen/_2sdp">
 
-
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -43,13 +41,13 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:paddingHorizontal="@dimen/_8sdp"
+                    android:paddingVertical="@dimen/_2sdp"
                     android:orientation="vertical">
 
                     <com.google.android.material.textview.MaterialTextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_8sdp"
-                        android:layout_marginTop="@dimen/_2sdp"
                         android:alpha="0.7"
                         android:ellipsize="end"
                         android:maxLines="1"
@@ -58,11 +56,11 @@
                         tools:text="Anderson Bell" />
 
                     <com.google.android.material.textview.MaterialTextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_8sdp"
-                        android:layout_marginBottom="@dimen/_2sdp"
                         android:alpha="0.8"
+                        android:ellipsize="end"
+                        android:maxLines="1"
                         android:text="@{size.name}"
                         android:textSize="@dimen/_11sdp"
                         app:fontFamily="@font/sc_dream5"
@@ -73,10 +71,11 @@
                     android:id="@+id/list_drag_handle"
                     setDragHandle="@{size.size}"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="end|center_vertical"
-                    android:layout_marginEnd="@dimen/_8sdp"
                     android:alpha="0.8"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="@dimen/_8sdp"
                     tools:src="@drawable/icon_drag_handle" />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </com.google.android.material.card.MaterialCardView>
