--- a/app/src/main/res/layout/item_tree_category.xml
+++ b/app/src/main/res/layout/item_tree_category.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
@@ -16,13 +15,13 @@
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/icon_layout"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingVertical="@dimen/_8sdp">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/arrow_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="@dimen/_10sdp"
                     android:layout_marginStart="@dimen/_4sdp"
                     app:srcCompat="@drawable/icon_triangle_right" />
 
@@ -30,7 +29,6 @@
                     android:id="@+id/folder_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
                     app:srcCompat="@drawable/icon_folder" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -43,17 +41,28 @@
                 android:ellipsize="end"
                 android:gravity="center_vertical"
                 android:maxLines="1"
-                android:textSize="@dimen/_12sdp"
-                tools:text="Short Sleeve" />
+                android:textSize="@dimen/_11sdp"
+                tools:text="Short Sleeasdasdasdasdasdasdasdve" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/current_position"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/_4sdp"
+                android:alpha=".7"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:text="@string/current_position"
+                android:textSize="@dimen/_6sdp"
+                android:visibility="gone" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/add_icon"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="@dimen/_20sdp"
-                android:src="@drawable/icon_add"
-                android:tint="?myColorControl" />
+                android:layout_height="match_parent"
+                android:paddingStart="0dp"
+                android:paddingEnd="@dimen/_16sdp"
+                android:src="@drawable/icon_add"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <View
