--- a/app/src/main/res/menu/input_output_menu.xml
+++ b/app/src/main/res/menu/input_output_menu.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <item
-        android:id="@+id/input_output_save"
-        android:icon="@drawable/icon_save"
-        android:title="@string/save"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/input_output_favorite"
+        android:icon="@drawable/icon_favorite_border"
+        android:title="@string/favorite"
+        app:showAsAction="always" />
     <item
         android:id="@+id/input_output_delete"
         android:icon="@drawable/icon_delete"
