--- a/app/src/main/res/menu/list_menu.xml
+++ b/app/src/main/res/menu/list_menu.xml
@@ -3,14 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_list_add_folder"
-        android:icon="@drawable/icon_folder_add"
-        android:title="@string/add_folder"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/menu_list_favorite"
+        android:icon="@drawable/icon_favorite_border"
+        android:title="@string/favorite"
+        app:showAsAction="always" />
     <item
         android:id="@+id/menu_list_list_grid"
         android:icon="@drawable/icon_list"
         android:title="@string/view_type"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_list_popup"
+        android:icon="@drawable/icon_popup_menu"
+        android:title="@string/menu"
         app:showAsAction="ifRoom" />
-
 </menu>
