--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,92 +17,76 @@
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
+        <!-- status bar text color -->
         <item name="android:windowLightStatusBar">true</item>
-        <!-- Customize your theme here. -->
-        <!--        Phone Navigation Bar Color-->
-        <item name="android:navigationBarColor">@color/white</item>
-        <item name="android:windowLightNavigationBar">true</item>
-        <!--        Menu Text Color-->
-        <item name="android:textColorSecondary">@android:color/black</item>
-        <!--        Menu Text Style-->
-        <item name="actionMenuTextAppearance">@style/menuTextStyle</item>
-        <!--        Text Color-->
-        <item name="android:textColor">@color/black</item>
-        <!--        Snack Bar Text Style-->
-        <item name="snackbarTextViewStyle">@style/mySnackBarText</item>
-        <!--        Snack Bar Action Style-->
-        <item name="snackbarButtonStyle">@style/mySnackBarAction</item>
-        <!--        Snack Bar Style-->
-        <item name="snackbarStyle">@style/mySnackBar</item>
-        <!--        ActionMode Close Button Gone-->
-        <item name="actionModeCloseButtonStyle">@style/myActionBarCloseButton</item>
 
+        <!-- Customize your theme here. -->
+        <!--        phone navigation bar color-->
+        <item name="android:navigationBarColor">@color/white</item>
+        <!--        phone navigation bar icon color-->
+        <item name="android:windowLightNavigationBar">true</item>
+        <!--        menu color-->
+        <item name="android:textColorSecondary">@android:color/black</item>
+        <!--        text color-->
+        <item name="android:textColor">@color/black</item>
+        <!--        actionMode close button gone-->
+        <item name="actionModeCloseButtonStyle">@style/myActionBarCloseButton</item>
+        <!--        actionMode cover actionBar-->
         <item name="windowActionModeOverlay">true</item>
+        <!--        font-->
         <item name="fontFamily">@font/sc_dream</item>
+        <!--        recycler view background color-->
         <item name="recyclerBackground">@color/recycler_background</item>
+        <!--        input output go button color-->
         <item name="go_button_color">@color/go_button_color</item>
         <!--        ripple color remove-->
         <item name="colorControlHighlight">@android:color/transparent</item>
+        <!--        my color control-->
         <item name="myColorControl">@color/black</item>
+        <!--        tree view background color-->
         <item name="treeViewBackgroundColor">@color/white</item>
+        <!--        menu icon padding-->
         <item name="actionButtonStyle">@style/myMenuPadding</item>
     </style>
-    )
-    <!--    Tool Bar Title Style-->
-    <!--    In Activity_main.xml-->
-    <!--    Menu Text Style-->
-    <style name="menuTextStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Menu">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">@dimen/_10sdp</item>
+    <!--    actionMode close button gone-->
+    <style name="myActionBarCloseButton">
+        <item name="android:visibility">gone</item>
     </style>
-    <!--    Edit Text Corner-->
-    <!--    In fragment_input.xml-->
+    <!--    menu icon padding-->
+    <style name="myMenuPadding" parent="Theme.Project_MyFit">
+        <item name="android:paddingEnd">@dimen/_4sdp</item>
+    </style>
+    <!--    edit text corner-->
     <style name="myEditTextCorner" parent="ShapeAppearance.MaterialComponents.SmallComponent">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">@dimen/_12sdp</item>
     </style>
-    <!--    Bottom Navigation Active Color-->
+    <!--    bottom navigation active color-->
     <style name="myBottomNav" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/black</item>
     </style>
-    <!--    Alert Dialog Style-->
+    <!--    alert dialog Style-->
     <style name="myAlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
         <item name="colorPrimary">@color/black</item>
+        <!--        single choice item text color-->
         <item name="textColorAlertDialogListItem">@color/black</item>
+        <item name="android:textSize">@dimen/_12sdp</item>
     </style>
-    <!--    Edit Text Focused Outline-->
-    <!--    In fragment_input.xml-->
+    <!--    edit text focused outline-->
     <style name="myEditText" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
         <item name="colorPrimary">@color/black</item>
     </style>
-    <!--    Snack Bar Text Style-->
-    <style name="mySnackBarText" parent="Widget.MaterialComponents.Snackbar.TextView">
-        <item name="android:textSize">@dimen/_8sdp</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
-    <!--    Snack Bar Action Style-->
-    <style name="mySnackBarAction" parent="Widget.MaterialComponents.Button.TextButton">
-        <item name="android:textSize">@dimen/_8sdp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">#FF00CCCC</item>
-    </style>
-    <!--    Snack Bar Style-->
-    <style name="mySnackBar" parent="Widget.MaterialComponents.Snackbar">
-        <item name="backgroundTint">@color/dark_gray</item>
-        <item name="android:paddingHorizontal">@dimen/_8sdp</item>
-        <item name="actionTextColorAlpha">1</item>
-    </style>
-    <!--    Action Bar Title Style-->
+    <!--    action bar title style-->
     <style name="myActionBarTitleStyle" parent="Widget.MaterialComponents.Toolbar">
         <item name="android:textSize">@dimen/_12sdp</item>
     </style>
-    <!--    Action Mode Close Button-->
-    <style name="myActionBarCloseButton">
-        <item name="android:visibility">gone</item>
+    <!--    edit text hint focused size-->
+    <style name="myHintSize" parent="Widget.Design.TextInputLayout">
+        <item name="android:textSize">@dimen/_8sdp</item>
     </style>
-
-    <style name="myMenuPadding" parent="Theme.Project_MyFit">
-        <item name="android:paddingHorizontal">@dimen/_6sdp</item>
+    <!--    edit text suffix size-->
+    <style name="mySuffixSize" parent="Widget.Design.TextInputLayout">
+        <item name="android:textSize">@dimen/_10sdp</item>
     </style>
 
     <attr name="recyclerBackground" format="color" />
