--- a/app/src/main/res/layout/item_tree_folder.xml
+++ b/app/src/main/res/layout/item_tree_folder.xml
@@ -55,7 +55,7 @@
                 android:maxLines="1"
                 android:text="@string/current_position"
                 android:textSize="@dimen/_6sdp"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/add_icon"
