--- a/app/src/main/res/layout/item_tree_category.xml
+++ b/app/src/main/res/layout/item_tree_category.xml
@@ -49,8 +49,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_4sdp"
-                android:gravity="center_vertical"
+                android:gravity="bottom"
                 android:maxLines="1"
+                android:paddingBottom="@dimen/_10sdp"
                 android:text="@string/current_position"
                 android:textSize="@dimen/_6sdp"
                 android:visibility="gone" />
@@ -61,7 +62,7 @@
                 android:layout_height="match_parent"
                 android:paddingStart="0dp"
                 android:paddingEnd="@dimen/_16sdp"
-                android:src="@drawable/icon_add"/>
+                android:src="@drawable/icon_add" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <View
