--- a/app/src/main/res/layout/item_tree_folder.xml
+++ b/app/src/main/res/layout/item_tree_folder.xml
@@ -50,8 +50,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_4sdp"
-                android:gravity="center_vertical"
+                android:gravity="bottom"
                 android:maxLines="1"
+                android:paddingBottom="@dimen/_10sdp"
                 android:text="@string/current_position"
                 android:textSize="@dimen/_6sdp"
                 android:visibility="gone" />
