리사이클러뷰 최적화 전 저장

--- a/app/src/main/res/layout/item_tree_category.xml
+++ b/app/src/main/res/layout/item_tree_category.xml
@@ -48,7 +48,7 @@
                 android:id="@+id/current_position"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/_4sdp"
+                android:layout_marginHorizontal="@dimen/_4sdp"
                 android:gravity="bottom"
                 android:maxLines="1"
                 android:paddingBottom="@dimen/_10sdp"
