--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -81,6 +81,7 @@
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:spanCount="4"
                     tools:itemCount="10"
+                    android:nestedScrollingEnabled="false"
                     tools:listitem="@layout/item_list_recycler_folder" />
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -90,6 +91,7 @@
                     android:layout_marginTop="@dimen/_8sdp"
                     android:background="@drawable/recycler_background"
                     android:clipToPadding="false"
+                    android:nestedScrollingEnabled="false"
                     android:overScrollMode="never"
                     android:paddingTop="@dimen/_8sdp"
                     android:paddingBottom="@dimen/_60sdp"
