그리드, 폴더 어댑터 최적화

--- a/app/src/main/res/layout/item_list_recycler_grid.xml
+++ b/app/src/main/res/layout/item_list_recycler_grid.xml
@@ -111,6 +111,7 @@
             android:buttonTint="?colorControlNormal"
             android:clickable="false"
             android:elevation="@dimen/_4sdp"
+            android:enabled="false"
             android:scaleX="0.7"
             android:scaleY="0.7"
             android:visibility="gone" />
