--- a/app/src/main/res/layout/item_list_recycler_folder.xml
+++ b/app/src/main/res/layout/item_list_recycler_folder.xml
@@ -57,6 +57,7 @@
                 android:alpha="0.8"
                 android:buttonTint="?colorControlNormal"
                 android:clickable="false"
+                android:enabled="false"
                 android:scaleX="0.5"
                 android:scaleY="0.5"
                 android:visibility="gone" />
