--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -70,19 +70,46 @@
                     </androidx.appcompat.widget.LinearLayoutCompat>
                 </HorizontalScrollView>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_folder"
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/recycler_folder_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:clipToPadding="false"
-                    android:orientation="vertical"
-                    android:overScrollMode="never"
-                    android:paddingHorizontal="@dimen/_8sdp"
-                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                    app:spanCount="4"
-                    tools:itemCount="10"
-                    android:nestedScrollingEnabled="false"
-                    tools:listitem="@layout/item_list_recycler_folder" />
+                    android:orientation="vertical">
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/folder_toggle_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:alpha="0.8"
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="@dimen/_4sdp"
+                        android:src="@drawable/icon_triangle_down" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_folder"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:clipToPadding="false"
+                        android:nestedScrollingEnabled="false"
+                        android:orientation="vertical"
+                        android:overScrollMode="never"
+                        android:paddingHorizontal="@dimen/_8sdp"
+                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                        app:spanCount="4"
+                        tools:itemCount="4"
+                        tools:listitem="@layout/item_list_recycler_folder" />
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/no_data"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:alpha="0.5"
+                    android:background="@drawable/recycler_background"
+                    android:gravity="center"
+                    android:text="@string/no_data"
+                    android:textSize="@dimen/_20sdp"
+                    android:visibility="gone" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_size"
@@ -95,6 +122,7 @@
                     android:overScrollMode="never"
                     android:paddingTop="@dimen/_8sdp"
                     android:paddingBottom="@dimen/_60sdp"
+                    android:visibility="visible"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:listitem="@layout/item_list_recycler_list" />
             </androidx.appcompat.widget.LinearLayoutCompat>
