--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -109,6 +109,7 @@
                     android:gravity="center"
                     android:text="@string/no_data"
                     android:textSize="@dimen/_20sdp"
+                    android:paddingTop="@dimen/_8sdp"
                     android:visibility="gone" />
 
                 <androidx.recyclerview.widget.RecyclerView
