--- a/app/src/main/res/layout/item_tree_category.xml
+++ b/app/src/main/res/layout/item_tree_category.xml
@@ -42,19 +42,29 @@
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:textSize="@dimen/_11sdp"
-                tools:text="Short Sleeasdasdasdasdasdasdasdve" />
+                tools:text="Short Sleeve" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/current_position"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="@dimen/_4sdp"
-                android:gravity="bottom"
+                android:layout_marginStart="@dimen/_4sdp"
+                android:gravity="center_vertical"
                 android:maxLines="1"
-                android:paddingBottom="@dimen/_10sdp"
                 android:text="@string/current_position"
                 android:textSize="@dimen/_6sdp"
                 android:visibility="gone" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="@dimen/_6sdp"
+                android:layout_marginVertical="@dimen/_2sdp"
+                android:alpha="0.6"
+                android:textSize="@dimen/_6sdp"
+                tools:text="20" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/add_icon"
