--- a/app/src/main/res/layout/item_tree_folder.xml
+++ b/app/src/main/res/layout/item_tree_folder.xml
@@ -56,6 +56,16 @@
                 android:text="@string/current_position"
                 android:textSize="@dimen/_6sdp"
                 android:visibility="gone" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="@dimen/_6sdp"
+                android:layout_marginVertical="@dimen/_2sdp"
+                android:alpha="0.6"
+                android:textSize="@dimen/_6sdp"
+                tools:text="20" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/add_icon"
