--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
                 <com.google.android.material.appbar.MaterialToolbar
                     android:id="@+id/toolbar"
@@ -25,8 +25,9 @@
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/toolbar_main_title"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
+                    android:gravity="center_vertical"
                     android:text="@string/app_name"
                     android:textColor="?colorControlNormal"
                     android:textSize="@dimen/_26sdp"
