--- a/app/src/main/res/layout/list_popup_menu.xml
+++ b/app/src/main/res/layout/list_popup_menu.xml
@@ -37,6 +37,16 @@
                     android:paddingEnd="@dimen/_28sdp"
                     android:text="@string/sort"
                     android:textSize="@dimen/_11sdp" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/recycle_bin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/_8sdp"
+                    android:paddingStart="@dimen/_12sdp"
+                    android:paddingEnd="@dimen/_28sdp"
+                    android:text="@string/recycle_bin"
+                    android:textSize="@dimen/_11sdp" />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </com.google.android.material.card.MaterialCardView>
     </FrameLayout>
