--- a/app/src/main/res/layout/tree_view_root.xml
+++ b/app/src/main/res/layout/tree_view_root.xml
@@ -8,6 +8,7 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/add_category_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
