--- a/app/src/main/res/layout/item_tree_category.xml
+++ b/app/src/main/res/layout/item_tree_category.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="category"
+            type="com.example.project_myfit.ui.main.database.Category" />
+
+    </data>
+
     <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -41,6 +49,7 @@
                 android:ellipsize="end"
                 android:gravity="center_vertical"
                 android:maxLines="1"
+                android:text="@{category.category}"
                 android:textSize="@dimen/_11sdp"
                 tools:text="Short Sleeve" />
 
@@ -52,6 +61,7 @@
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:text="@string/current_position"
+                android:alpha="0.5"
                 android:textSize="@dimen/_6sdp"
                 android:visibility="gone" />
 
@@ -59,6 +69,7 @@
                 android:id="@+id/amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="@{category.itemAmount}"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="@dimen/_6sdp"
                 android:layout_marginVertical="@dimen/_2sdp"
