뷰페이져 구현 전 저장

--- a/app/src/main/res/layout/item_main_recycler.xml
+++ b/app/src/main/res/layout/item_main_recycler.xml
@@ -10,118 +10,89 @@
             type="com.example.project_myfit.ui.main.database.Category" />
     </data>
 
-    <com.chauthai.swipereveallayout.SwipeRevealLayout
-        android:id="@+id/main_swipeLayout"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:dragEdge="right"
-        app:mode="normal">
+        android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/main_check_box"
+            android:layout_width="@dimen/_20sdp"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_marginStart="@dimen/_8sdp"
+            android:alpha="0.8"
+            android:buttonTint="?colorControlNormal"
+            android:clickable="false"
+            android:enabled="false"
+            android:scaleX="0.7"
+            android:scaleY="0.7" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/edit_icon"
-                android:layout_width="@dimen/_28sdp"
-                android:layout_height="match_parent"
-                android:layout_marginVertical="@dimen/_8sdp"
-                android:background="#008000"
-                android:scaleType="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:src="@drawable/icon_edit"
-                android:tint="@color/white" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/delete_icon"
-                android:layout_width="@dimen/_28sdp"
-                android:layout_height="match_parent"
-                android:layout_marginVertical="@dimen/_8sdp"
-                android:layout_marginEnd="@dimen/_12sdp"
-                android:background="#B00020"
-                android:scaleType="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:src="@drawable/icon_delete"
-                android:tint="@color/white" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <FrameLayout
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/main_card_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_12sdp"
+            android:layout_marginVertical="@dimen/_2sdp"
+            app:cardBackgroundColor="?colorPrimary"
+            app:cardCornerRadius="@dimen/_4sdp"
+            app:cardElevation="@dimen/_2sdp">
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/main_card_view"
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_12sdp"
-                android:layout_marginVertical="@dimen/_6sdp"
-                app:cardBackgroundColor="?colorPrimary"
-                app:cardCornerRadius="@dimen/_4sdp"
-                app:cardElevation="@dimen/_2sdp">
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginStart="@dimen/_4sdp"
-                        android:alpha="0.7"
-                        android:scaleX="0.3"
-                        android:scaleY="0.3"
-                        app:srcCompat="@drawable/icon_dot" />
-
-                    <com.google.android.material.textview.MaterialTextView
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="@dimen/_8sdp"
-                        android:alpha="0.8"
-                        android:ellipsize="end"
-                        android:maxWidth="@dimen/_220sdp"
-                        android:maxLines="1"
-                        android:text="@{category.category}"
-                        android:textSize="@dimen/_11sdp"
-                        app:fontFamily="@font/sc_dream5"
-                        tools:text="반팔" />
-
-                    <FrameLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginStart="@dimen/_4sdp"
-                        android:background="@drawable/item_amount_background">
-
-                        <com.google.android.material.textview.MaterialTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginHorizontal="@dimen/_6sdp"
-                            android:layout_marginVertical="@dimen/_2sdp"
-                            android:alpha="0.6"
-                            android:text="@{category.itemAmount}"
-                            android:textSize="@dimen/_8sdp"
-                            tools:text="20" />
-                    </FrameLayout>
-                </androidx.appcompat.widget.LinearLayoutCompat>
+                android:layout_height="wrap_content">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end|center_vertical"
-                    android:layout_marginEnd="@dimen/_8sdp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="@dimen/_4sdp"
                     android:alpha="0.7"
-                    android:scaleX="0.6"
-                    android:scaleY="0.6"
-                    app:srcCompat="@drawable/icon_arrow" />
-            </com.google.android.material.card.MaterialCardView>
-        </FrameLayout>
+                    android:scaleX="0.3"
+                    android:scaleY="0.3"
+                    app:srcCompat="@drawable/icon_dot" />
 
-    </com.chauthai.swipereveallayout.SwipeRevealLayout>
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/_8sdp"
+                    android:alpha="0.8"
+                    android:ellipsize="end"
+                    android:maxWidth="@dimen/_220sdp"
+                    android:maxLines="1"
+                    android:text="@{category.category}"
+                    android:textSize="@dimen/_12sdp"
+                    app:fontFamily="@font/sc_dream5"
+                    tools:text="반팔" />
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:background="@drawable/item_amount_background">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginHorizontal="@dimen/_6sdp"
+                        android:layout_marginVertical="@dimen/_2sdp"
+                        android:alpha="0.6"
+                        android:text="@{category.itemAmount}"
+                        android:textSize="@dimen/_8sdp"
+                        tools:text="20" />
+                </FrameLayout>
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/main_drag_handle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_vertical"
+                android:layout_marginEnd="@dimen/_8sdp"
+                android:alpha="0.7"
+                android:scaleX="0.9"
+                app:srcCompat="@drawable/icon_drag_handle" />
+        </com.google.android.material.card.MaterialCardView>
+    </FrameLayout>
+
 </layout>
