--- a/app/src/main/res/menu/list_menu.xml
+++ b/app/src/main/res/menu/list_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
@@ -11,10 +12,11 @@
         android:id="@+id/menu_list_list_grid"
         android:icon="@drawable/icon_list"
         android:title="@string/view_type"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
     <item
         android:id="@+id/menu_list_popup"
         android:icon="@drawable/icon_popup_menu"
         android:title="@string/menu"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 </menu>
